--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -36,8 +36,8 @@ jobs:
 
       - name: Setup Terraform with specified version on the runner
         uses: hashicorp/setup-terraform@v2
-        # with:
-        #   terraform_verion: 1.6.3
+        with:
+          terraform_verion: 1.6.3
      
       - name: Terraform init
         id: init
